<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editdistancie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="numberDecimal"
        android:hint="@string/distancia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/totaldequilometros"/>

    <EditText
        android:id="@+id/editprice"
        android:layout_width="match_parent"
        android:layout_marginTop="32dp"
        android:inputType="numberDecimal"
        android:layout_height="wrap_content"
        android:hint="@string/preco"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/precoporlitro"/>

    <EditText
        android:id="@+id/editautonomy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:layout_marginTop="32dp"
        android:hint="@string/autonomia"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/km_por_litro"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:textSize="20sp"
        android:textAllCaps="true"
        android:layout_gravity="center"
        android:text="@string/Gasto_total"/>

    <TextView
        android:id="@+id/textTotalvalue"
        android:layout_width="wrap_content"
        android:textSize="40sp"
        android:layout_marginTop="16dp"
        android:layout_height="wrap_content"
        android:textColor="@color/darkblue"
        android:layout_gravity="center"
        android:text="@string/Valor_Total"/>

    <Button
        android:id="@+id/buttonCalculate"
        android:layout_marginTop="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:textSize="20sp"
        android:background="@color/lightgreen"
        android:textColor="@color/white"
        android:text="@string/calcular"/>

    <Button
        android:id="@+id/buttonLimpar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="20dp"
        android:textSize="20sp"
        android:background="@color/lightgreen"
        android:textColor="@color/white"
        android:text="@string/limpar"/>

</LinearLayout>